--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
             100% { background-position: 0% 50%; }
         }
 
-        /* Facebook button specific styles */
-        .social-btn[title*="Facebook"] {
+        /* X button specific styles */
+        .social-btn[title*="X"] {
             background: linear-gradient(135deg, #1877F2, #0D57A0);
             position: relative;
         }
 
-        .social-btn[title*="Facebook"]:before {
+        .social-btn[title*="X"]:before {
             content: '';
             position: absolute;
             top: 0;
@@ -253,7 +253,7 @@
             transition: all 0.6s;
         }
 
-        .social-btn[title*="Facebook"]:hover:before {
+        .social-btn[title*="X"]:hover:before {
             left: 100%;
         }
 
@@ -911,7 +911,7 @@
                     <!-- Social Media Buttons -->
                     <div class="flex items-center space-x-1 sm:space-x-2 mr-2 sm:mr-3 fade-in-element" style="animation-delay: 0.2s;">
                         <!-- Instagram Button -->
-                        <a href="https://www.instagram.com/vida_donacion/" target="_blank" rel="noopener noreferrer" 
+                        <a href="https://www.instagram.com/ont.esp/#" target="_blank" rel="noopener noreferrer" 
                            class="social-btn w-6 h-6 sm:w-8 sm:h-8 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 focus:outline-none focus:ring-2 focus:ring-pink-300 focus:ring-offset-2"
                            style="background: linear-gradient(45deg, #833AB4, #E1306C, #F77737);"
                            title="Síguenos en Instagram">
@@ -919,12 +919,13 @@
                                 <path d="M12,2.163c3.204,0,3.584,0.012,4.85,0.07c3.252,0.148,4.771,1.691,4.919,4.919c0.058,1.265,0.069,1.645,0.069,4.849c0,3.205-0.012,3.584-0.069,4.849c-0.149,3.225-1.664,4.771-4.919,4.919c-1.266,0.058-1.644,0.07-4.85,0.07c-3.204,0-3.584-0.012-4.849-0.07c-3.26-0.149-4.771-1.699-4.919-4.92c-0.058-1.265-0.07-1.644-0.07-4.849c0-3.204,0.013-3.583,0.07-4.849c0.149-3.227,1.664-4.771,4.919-4.919c1.266-0.057,1.645-0.069,4.849-0.069zm0-2.163c-3.259,0-3.667,0.014-4.947,0.072c-4.358,0.2-6.78,2.618-6.98,6.98c-0.059,1.281-0.073,1.689-0.073,4.948c0,3.259,0.014,3.668,0.072,4.948c0.2,4.358,2.618,6.78,6.98,6.98c1.281,0.058,1.689,0.072,4.948,0.072c3.259,0,3.668-0.014,4.948-0.072c4.354-0.2,6.782-2.618,6.979-6.98c0.059-1.28,0.073-1.689,0.073-4.948c0-3.259-0.014-3.667-0.072-4.947c-0.196-4.354-2.617-6.78-6.979-6.98c-1.281-0.059-1.689-0.073-4.949-0.073zm0,5.838c-3.403,0-6.162,2.759-6.162,6.162c0,3.403,2.759,6.163,6.162,6.163s6.162-2.759,6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0,10.162c-2.209,0-4-1.79-4-4c0-2.209,1.791-4,4-4s4,1.791,4,4c0,2.21-1.791,4-4,4zm6.406-11.845c-0.796,0-1.441,0.645-1.441,1.44s0.645,1.44,1.441,1.44c0.795,0,1.439-0.645,1.439-1.44s-0.644-1.44-1.439-1.44z"/>
                             </svg>
                         </a>
-                        <!-- Facebook Button -->
-                        <a href="https://www.facebook.com/share/19NdNXLpmr/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer" 
-                           class="social-btn w-6 h-6 sm:w-8 sm:h-8 bg-blue-600 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-300 focus:ring-offset-2"
-                           title="Síguenos en Facebook">
-                            <svg class="w-3 h-3 sm:w-4 sm:h-4 text-white" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                        <!-- X Button -->
+                        <a href="https://x.com/ONT_esp" target="_blank" rel="noopener noreferrer"
+                           class="social-btn w-6 h-6 sm:w-8 sm:h-8 rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110 focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+                           style="background: #232323; box-shadow: 4px 4px 12px 0 #0004;"
+                           title="Síguenos en X">
+                            <svg class="w-3 h-3 sm:w-4 sm:h-4" viewBox="0 0 660 660" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M183 495L330 330L477 495H550L385 330L550 165H477L330 330L183 165H110L275 330L110 495H183Z" fill="white"/>
                             </svg>
                         </a>
                     </div>
