--- a/quiz.html
+++ b/quiz.html
@@ -277,7 +277,7 @@
         <div id="feedback-icon-container"></div>
         
         <header class="text-center mb-2 fade-in">
-            <img src="Vidalogo.png" alt="VIDA" class="mx-auto h-24 mb-1">
+            <img src="Vidalogo.png" alt="VIDA" class="mx-auto h-32 mb-1 sm:h-36">
             <h1 class="text-2xl md:text-3xl font-bold text-[var(--vida-primary-blue)] mb-1">
                 Desmitificador Exprés
             </h1>
