--- a/quiz.html
+++ b/quiz.html
@@ -859,22 +859,23 @@
                 INSTRUCCIONES ESPECÍFICAS:
                 - Enfócate especialmente en: ${randomFocus}
                 - Incluye aspectos de: ${randomAdvanced}
-                - Estas son preguntas 1-5, deben ser ESPECÍFICAS y DESAFIANTES
-                - Incluye datos técnicos o menos conocidos
-                - Usa un tono educativo y profesional
-                - Las preguntas deben ser claras y directas, con respuestas de verdadero o falso
-                - Cada pregunta debe tener una EXPLICACIÓN breve (máximo 2 líneas) que explique por qué la respuesta es correcta o incorrecta
-                - No repitas preguntas anteriores (preguntas 1-5)
-                - No uses preguntas del banco de preguntas de respaldo
+                - Estas son preguntas 1-5, deben ser ESPECÍFICAS y DESAFIANTES.
+                - Incluye datos técnicos o menos conocidos.
+                - Usa un tono educativo y profesional.
+                - Las preguntas deben ser claras y directas, con respuestas de verdadero o falso.
+                - Cada pregunta debe tener una EXPLICACIÓN breve (máximo 2 líneas) que explique por qué la respuesta es correcta o incorrecta.
+                - No repitas preguntas anteriores (preguntas 1-5).
+                - No uses preguntas del banco de preguntas de respaldo.
                 - Las preguntas  debes ser basadas en informacion actual de normas en España.
                 - Las preguntas y respuestas deben ser ciertas y basadas en información verificada.
-                - Las preguntas deben estar basadas en información actual y verificada en España
-                - Considera que en España todas las personas son consideradas donantes salvo que hayan manifestado lo contrario (consentimiento presunto)
-                - Aunque el consentimiento es presunto, siempre se consulta a la familia en la práctica
-                - Las preguntas deben ser apropiadas para un público general, sin tecnicismos excesivos
-                - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza
+                - Las preguntas deben estar basadas en información actual y verificada en España.
+                - Considera que en España todas las personas son consideradas donantes salvo que hayan manifestado lo contrario (consentimiento presunto).
+                - Aunque el consentimiento es presunto, siempre se consulta a la familia en la práctica.
+                - Las preguntas deben ser apropiadas para un público general, sin tecnicismos excesivos.
+                - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza.
                 - Cita prácticas o normas reales del sistema español de trasplantes (ONT, hospitales, criterios médicos)
                 - No uses preguntas que ya hayan sido generadas en el segundo bloque.
+                - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
                 - Brinda información en el contexto de España.
                 - Cada pregunta debe ser DIFERENTE y ORIGINAL
                 - Número de sesión avanzada: ${randomNumber}
@@ -1038,27 +1039,28 @@
 
                 INSTRUCCIONES ESPECÍFICAS:
                 - Enfócate especialmente en: ${randomFocus}
-                - Cada pregunta debe ser DIFERENTE y ORIGINAL
-                - Incluye datos específicos de España cuando sea relevante
+                - Cada pregunta debe ser DIFERENTE y ORIGINAL.
+                - Incluye datos específicos de España cuando sea relevante.
                 - Mezcla preguntas obvias con otras más desafiantes.
-                - Estas son preguntas 6-10, deben ser MÁS ESPECÍFICAS y DESAFIANTES
-                - Incluye datos técnicos o menos conocidos
-                - Usa un tono educativo y profesional
-                - Las preguntas deben ser claras y directas, con respuestas de verdadero o falso
-                - Cada pregunta debe tener una EXPLICACIÓN breve (máximo 2 líneas) que explique por qué la respuesta es correcta o incorrecta
-                - No repitas preguntas anteriores (preguntas 1-5)
-                - No uses preguntas del banco de preguntas de respaldo
+                - Estas son preguntas 6-10, deben ser MÁS ESPECÍFICAS y DESAFIANTES.
+                - Incluye datos técnicos o menos conocidos.
+                - Usa un tono educativo y profesional.
+                - Las preguntas deben ser claras y directas, con respuestas de verdadero o falso.
+                - Cada pregunta debe tener una EXPLICACIÓN breve (máximo 2 líneas) que explique por qué la respuesta es correcta o incorrecta.
+                - No repitas preguntas anteriores (preguntas 1-5).
+                - No uses preguntas del banco de preguntas de respaldo.
                 - Las preguntas  debes ser basadas en informacion actual de normas en España.
                 - Las preguntas y respuestas deben ser ciertas y basadas en información verificada.
-                - Las preguntas deben estar basadas en información actual y verificada en España
-                - Considera que en España todas las personas son consideradas donantes salvo que hayan manifestado lo contrario (consentimiento presunto)
-                - Aunque el consentimiento es presunto, siempre se consulta a la familia en la práctica
-                - Las preguntas deben ser apropiadas para un público general, sin tecnicismos excesivos
-                - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza
-                - Cita prácticas o normas reales del sistema español de trasplantes (ONT, hospitales, criterios médicos)
+                - Las preguntas deben estar basadas en información actual y verificada en España.
+                - Considera que en España todas las personas son consideradas donantes salvo que hayan manifestado lo contrario (consentimiento presunto).
+                - Aunque el consentimiento es presunto, siempre se consulta a la familia en la práctica.
+                - Las preguntas deben ser apropiadas para un público general, sin tecnicismos excesivos.
+                - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza.
+                - Cita prácticas o normas reales del sistema español de trasplantes (ONT, hospitales, criterios médicos).
                 - No uses preguntas que ya hayan sido generadas en el segundo bloque.
+                - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro
                 - Brinda información en el contexto de España.
-                - Cada pregunta debe ser DIFERENTE y ORIGINAL
+                - Cada pregunta debe ser DIFERENTE y ORIGINAL.
                 - Número de sesión: ${randomNumber}
                 - Timestamp: ${currentTime}
                 
