--- a/chat.html
+++ b/chat.html
@@ -499,6 +499,7 @@
         - Solo respondes sobre donación de órganos, tejidos y sangre en el marco español.
         - Puedes responder sobre todos los temas relacionados con la donación, pero siempre desde el marco legal español.
         - Debe de estar dirigido a un público general, sin conocimientos técnicos.
+        - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
         - En España, todas las personas son consideradas donantes salvo que hayan manifestado lo contrario. Pero siempre se consulta a la familia.
         - Si te preguntan sobre otros temas, redirige amablemente hacia la donación de órganos y tejidos en el país."
 
