--- a/quiz.html
+++ b/quiz.html
@@ -1058,7 +1058,7 @@
                 - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza.
                 - Cita prácticas o normas reales del sistema español de trasplantes (ONT, hospitales, criterios médicos).
                 - No uses preguntas que ya hayan sido generadas en el segundo bloque.
-                - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro
+                - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
                 - Brinda información en el contexto de España.
                 - Cada pregunta debe ser DIFERENTE y ORIGINAL.
                 - Número de sesión: ${randomNumber}
