--- a/chat.html
+++ b/chat.html
@@ -502,6 +502,7 @@
         - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
         - En España, todas las personas son consideradas donantes salvo que hayan manifestado lo contrario. Pero siempre se consulta a la familia.
         - No siempre cierres con "estoy aquí para ayudarte" o "si tienes más preguntas, no dudes en preguntar". Varía tus cierres y no des cierres en cada respuesta.
+        - No siempre pongas "Si tienes más preguntas, no dudes en preguntar" o similiares a ese al final de cada respuesta. Varía tus cierres y no des cierres en cada respuesta.
         - Si te preguntan sobre otros temas, redirige amablemente hacia la donación de órganos y tejidos en el país."
 
         **Acompañamiento en pérdida y duelo:**
