--- a/quiz.html
+++ b/quiz.html
@@ -305,7 +305,7 @@
                 <h2 class="text-2xl font-bold mb-4">¡Bienvenido al Quiz!</h2>
                 <p class="text-gray-600 mb-6">
                     Responde preguntas de verdadero o falso para desmontar mitos 
-                    y conocer más sobre la donación de órganos en España.
+                    y conocer más sobre la donación de órganos.
                 </p>
                 <button id="start-quiz" class="answer-btn bg-[var(--vida-btn-green)] text-white hover:bg-[var(--vida-btn-green-hover)] transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-green-500/50">
                     🚀 Empezar el Quiz
@@ -875,8 +875,7 @@
                 - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza.
                 - Cita prácticas o normas reales del sistema español de trasplantes (ONT, hospitales, criterios médicos)
                 - No uses preguntas que ya hayan sido generadas en el segundo bloque.
-                - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
-                - Brinda información en el contexto de España.
+                - Importante no repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
                 - Cada pregunta debe ser DIFERENTE y ORIGINAL
                 - Número de sesión avanzada: ${randomNumber}
                 - Timestamp: ${currentTime}
@@ -1058,8 +1057,7 @@
                 - En el caso de tejidos, la edad suele ser menor de 70 años; en órganos se individualiza.
                 - Cita prácticas o normas reales del sistema español de trasplantes (ONT, hospitales, criterios médicos).
                 - No uses preguntas que ya hayan sido generadas en el segundo bloque.
-                - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
-                - Brinda información en el contexto de España.
+                - Importante no repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro.
                 - Cada pregunta debe ser DIFERENTE y ORIGINAL.
                 - Número de sesión: ${randomNumber}
                 - Timestamp: ${currentTime}
