--- a/chat.html
+++ b/chat.html
@@ -579,9 +579,24 @@
                         { role: "system", content: "Eres VIDA. Genera exactamente 4 preguntas cortas (máximo 6 palabras cada una) sobre donación de órganos en España que una persona común haría. Deben ser preguntas concisas, no repetidas de las anteriores que sugeriste, en donde se entienda perfectamente lo que se esta preguntado.Responde SOLO con las 4 preguntas, una por línea, sin numeración ni puntos. Ejemplos: '¿Duele donar órganos?', '¿Qué órganos se donan?', '¿Cómo me registro?', '¿Es seguro donar?'" },
                         { role: "user", content: "Genera 4 preguntas cortas sobre donación de órganos" }
                     ];
-                    const result = await callOpenAI(suggestionPrompt);
-                    const response = result.choices?.[0]?.message?.content || "";
-                    const questions = response.split('\n')
+                    // Unificar payload igual que el chat
+                    const response = await fetch('/api/openai', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            messages: suggestionPrompt,
+                            model: 'gpt-4o',
+                            temperature: 0.7,
+                            max_tokens: 100
+                        })
+                    });
+                    if (!response.ok) {
+                        const errorText = await response.text();
+                        throw new Error(`API request failed with status ${response.status}: ${errorText}`);
+                    }
+                    const result = await response.json();
+                    const text = result.choices?.[0]?.message?.content || "";
+                    const questions = text.split('\n')
                         .map(q => q.trim())
                         .filter(q => q.length > 0 && q.includes('?'))
                         .slice(0, 4);
