--- a/chat.html
+++ b/chat.html
@@ -174,7 +174,7 @@
             100% { box-shadow: 0 0 0 0 rgba(79,195,247,0.7); }
         }
         .mic-recording {
-            background: #E53935 !important; /* Rojo grabación */
+            background: #df5250 !important; /* Rojo grabación */
             animation: mic-pulse 1s infinite;
             box-shadow: 0 0 0 0 rgba(229,57,53,0.7);
         }
@@ -751,9 +751,9 @@
         // --- OpenAI TTS (Text-to-Speech) ---
         async function playOpenAITTS(text) {
             // ttsBtn, bocinaImg, bocinaSvg son opcionales (solo para animación)
-            // Mejorado: permite pausar/reanudar/detener audio con el mismo botón
+            // Modificado: al parar el audio, la próxima reproducción siempre inicia desde el principio
             if (!playOpenAITTS.audioObj) playOpenAITTS.audioObj = null;
-            if (!playOpenAITTS.audioState) playOpenAITTS.audioState = 'stopped'; // 'playing', 'paused', 'stopped'
+            if (!playOpenAITTS.audioState) playOpenAITTS.audioState = 'stopped'; // 'playing', 'stopped'
             let ttsBtn, bocinaImg, bocinaSvg;
             if (arguments.length > 1) {
                 ttsBtn = arguments[1];
@@ -763,19 +763,11 @@
             // Si ya hay audio reproduciéndose
             if (playOpenAITTS.audioObj && playOpenAITTS.audioState === 'playing') {
                 playOpenAITTS.audioObj.pause();
-                playOpenAITTS.audioState = 'paused';
+                playOpenAITTS.audioObj.currentTime = 0;
+                playOpenAITTS.audioState = 'stopped';
                 if (ttsBtn) ttsBtn.classList.remove('tts-playing', 'opacity-60');
                 if (bocinaImg) bocinaImg.classList.remove('text-blue-600');
                 if (bocinaSvg) bocinaSvg.classList.remove('text-blue-600');
-                return;
-            }
-            // Si está pausado, reanudar
-            if (playOpenAITTS.audioObj && playOpenAITTS.audioState === 'paused') {
-                playOpenAITTS.audioObj.play();
-                playOpenAITTS.audioState = 'playing';
-                if (ttsBtn) ttsBtn.classList.add('tts-playing', 'opacity-60');
-                if (bocinaImg) bocinaImg.classList.add('text-blue-600');
-                if (bocinaSvg) bocinaSvg.classList.add('text-blue-600');
                 return;
             }
             // Si está detenido o no existe, crear nuevo audio
@@ -807,7 +799,7 @@
                 };
                 audio.onplay = startAnim;
                 audio.onpause = () => {
-                    playOpenAITTS.audioState = 'paused';
+                    playOpenAITTS.audioState = 'stopped';
                     stopAnim();
                 };
                 audio.onended = () => {
