--- a/chat.html
+++ b/chat.html
@@ -176,10 +176,10 @@
         .mic-recording {
             background: #df5250 !important; /* Rojo grabación */
             animation: mic-pulse 1s infinite;
-            box-shadow: 0 0 0 0 rgba(229,57,53,0.7);
+            box-shadow: 0 0 0 0 rgba(238, 80, 77, 0.7);
         }
         @keyframes mic-pulse {
-            0% { box-shadow: 0 0 0 0 rgba(229,57,53,0.7); }
+            0% { box-shadow: 0 0 0 0 rgba(237, 99, 96, 0.7); }
             70% { box-shadow: 0 0 0 10px rgba(229,57,53,0); }
             100% { box-shadow: 0 0 0 0 rgba(229,57,53,0.7); }
         }
@@ -249,14 +249,14 @@
             box-shadow: 0 4px 16px rgba(76,175,80,0.18);
         }
         #mic-btn {
-            background: linear-gradient(135deg, #42A5F5, #1976D2);
+            background: linear-gradient(135deg, #5ca7e5, #7ab5f1);
             color: #fff;
             box-shadow: 0 2px 8px rgba(33,150,243,0.12);
             transition: all 0.2s;
         }
         #mic-btn:hover {
-            background: linear-gradient(135deg, #1976D2, #42A5F5);
-            transform: scale(1.08);
+            background: linear-gradient(135deg, #3d94ec, #52a8ee);
+            transform: scale(1.08);s
             box-shadow: 0 4px 16px rgba(33,150,243,0.18);
         }
         #suggest-questions-btn {
@@ -354,7 +354,9 @@
                  <img src="Vidalogo.png" alt="VIDA Logo" class="h-20 w-auto object-contain sm:h-24" onerror="this.onerror=null;this.src='https://placehold.co/160x70/E3F2FD/0D47A1?text=VIDA';" />
                  </div>
                 <button id="close-chat-btn" class="text-gray-500 hover:bg-gray-200/50 p-2 rounded-full transition-colors" title="Cerrar Chat">
-                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg>
+                     <svg class="h-8 w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor">
+                         <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+                     </svg>
                 </button>
             </header>
             <main class="flex-1 flex overflow-hidden relative">
