--- a/chat.html
+++ b/chat.html
@@ -256,7 +256,7 @@
         }
         #mic-btn:hover {
             background: linear-gradient(135deg, #3d94ec, #52a8ee);
-            transform: scale(1.08);s
+            transform: scale(1.08);
             box-shadow: 0 4px 16px rgba(33,150,243,0.18);
         }
         #suggest-questions-btn {
