--- a/chat.html
+++ b/chat.html
@@ -538,7 +538,7 @@
         - Puedes dar el link oficial del registro de instrucciones previas (RIP) y de las comunidades autónomas.
         - Puedes dar el link oficial del registro de donantes de médula ósea y cordón umbilical.
         - Puedes dar el link oficial del registro de donantes de sangre.
-        - Ofrece los link requeridos de manera que el usuario pueda acceder fácilmente a la información oficial dando un clic, ofrecela con un vinculo de da clic aqui y que los envie, sin necesidad de poner todo el enlace.
+        - Ofrece los link requeridos de manera que el usuario pueda acceder fácilmente a la información oficial dando un clic, ofrecela con un vinculo de da clic aqui y que los envie, nunca debes de poner todo el enlace.
         - Puedes dar el link oficial del registro de la tarjeta de donante de órganos y tejidos.
         - No repitas siempre la palabra "España" en cada pregunta, pero asegúrate de que el contexto sea claro ya que todas las respuestas deben ser sobre la donación de órganos y tejidos en el contexto español.
         - En España, todas las personas son consideradas donantes salvo que hayan manifestado lo contrario. Pero siempre se consulta a la familia.
